# FuseHide

./: LICENSE  README.md  settings.gradle.kts
.github/workflows/: android.yml  build.yml  release.yml  xposed-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  fusefixer.cpp  fusehide.cpp
app/src/main/cpp/fusefixer/: elf_utils.cpp  elf_utils.hpp  fuse_wrappers.cpp  hook_install.cpp  jni_entry.cpp  runtime_state.cpp  state.hpp
app/src/main/cpp/fusehide/: elf_utils.cpp  elf_utils.hpp  fuse_wrappers.cpp  hook_install.cpp  jni_entry.cpp  runtime_state.cpp  shared.hpp  state.hpp  unicode_policy.cpp  wrappers.hpp
app/src/main/cpp/fusehide/core/: runtime_state.cpp  state.hpp
app/src/main/cpp/fusehide/elf/: elf_utils.cpp  elf_utils.hpp
app/src/main/cpp/fusehide/filters/: dirent_filter.cpp  dirent_filter.hpp  reply_buf_filter.cpp  reply_buf_filter.hpp
app/src/main/cpp/fusehide/hooks/: fuse_wrappers.cpp  hook_install.cpp  wrappers.hpp
app/src/main/cpp/fusehide/jni/: jni_entry.cpp
app/src/main/cpp/fusehide/policy/: path_policy.cpp  path_policy.hpp  unicode_policy.cpp
app/src/main/java/io/github/xiaotong6666/fusefixer/: Entry.java  HideConfig.kt  HideConfigNativeBridge.java  HideConfigProvider.kt  HideConfigRequestReceiver.kt  HideConfigStore.kt  MainActivity.kt  Utils.kt
app/src/main/java/io/github/xiaotong6666/fusehide/: ConfigScreen.kt  ConfigState.kt  DebugScreen.kt  (+18 more)
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-v31/: colors.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
gradle/: libs.versions.toml
xposed-stubs/src/main/java/android/content/pm/: ApplicationInfo.java
(+22 files in other folders)
